Refactored everything to support multiple projects.

--- a/index.html
+++ b/index.html
@@ -1,303 +1,4 @@
-<script src=js/M4.js></script>
-<script src=js/getFile.js></script>
-<script src=js/loadImage.js></script>
-<script src=js/webgl.js></script>
-<script src=js/webcam.js></script>
-<script src=js/trackHead.js></script>
-<script src=js/help.js></script>
-<script src=js/midi.js></script>
-<script src=js/pen.js></script>
-<script src=js/matchCurves.js></script>
-<script src=js/glyphs.js></script>
-<script src=js/chalktalk.js></script>
-<script src=js/codeArea.js></script>
-
-<canvas id=canvas2D style="position:absolute;top:0;left:0;"></canvas>
-<canvas id=canvas3D style="position:absolute;top:440;left:-2000;" width=600 height=600></canvas>
-<canvas id=canvasDiagram style="position:absolute;left:-2000;" width=500 height=500></canvas>
-<script>
-
-window.fontSize = 18;
-let codeArea = new CodeArea(-2000, 20), scene, sceneID, isAlt, isShift, isInfo, isInfoOpaque;
-let shift3D = 0, t3D = 0, isDrawpad;
-
-let ease = t => t * t * (3 - t - t);
-
-let figureFiles = [
-   'raytrace1.png',
-   'ray_sphere.png',
-   'cube.js',
-   'multiple_spheres_no_color.png',
-   'multiple_spheres.png',
-   'insert_code.png',
-   'shadow_ray.png',
-   'matrices : matrix_types.png',
-   'matrix_multiplication.png',
-];
-
-let gotoFigure = name => {
-   for (let n = 0 ; n < figureNames.length ; n++)
-      if (name === figureNames[n]) {
-         figureIndex = n;
-	 break;
-      }
-}
-
-let figures = [], figureNames = [], figureIndex = 0, dq = [], dqCount = 0;
-
-for (let n = 0 ; n < figureFiles.length ; n++) {
-   let file = figureFiles[n].trim();
-   let name = file.substring(0, file.indexOf('.'));
-
-   let i = file.indexOf(':');
-   if (i >= 0) {
-      name = file.substring(0, i).trim();
-      file = file.substring(i+1).trim();
-   }
-   if (file.length == 0)
-      continue;
-
-   if (file.indexOf('.js') < 0) {
-      figures.push(loadImage(file));
-      figureNames.push(name);
-   }
-   else {
-      let index = figures.length + dqCount++;
-      loadScript('diagrams/' + file, () => dq.push({ name:name, index:index, diagram: new Diagram() }));
-   }
-}
-
-let setScene = id => {
-   sceneID = id;
-   let url = './scenes/scene' + id + '.js';
-   loadScript(url, () => {
-      gl_start(canvas3D, scene = new Scene());
-      getFile(url, str => codeArea.getElement().value = str);
-   });
-}
-
-setScene('1');
-
-let pen = new Pen();
-let chalktalk = new Chalktalk();
-let isLightPen = true, isHelp = false;
-
-codeArea.callback = () => {
-   eval(codeArea.getElement().value);
-   gl_start(canvas3D, scene = new Scene());
-}
-
-let w = canvas2D.width = screen.width;
-let h = canvas2D.height = screen.height;
-let ctx = canvas2D.getContext('2d');
-let isMove = false, isScene = false, isCode = false, isDrag = false;
-pen.setContext(ctx);
-
-let D = {
-   ctx : canvasDiagram.getContext('2d'),
-   left : screen.width - 20 - 500, top : 20, w : 500, h : 500,
-   isIn : () => D.x >= 0 && D.x < D.w && D.y >= 0 && D.y < D.h,
-};
-
-let penDown = () => {
-   if (isInfo) {
-      let figure = figures[figureIndex];
-      if (D.isIn() && (figure.mouseDown || figure.mouseDrag || figure.mouseUp)) {
-         if (figure.mouseDown)
-            figure.mouseDown(D.x, D.y);
-	 D.isDown = true;
-	 return;
-      }
-   }
-
-   pen.down();
-}
-
-let penUp = () => {
-   if (isInfo) {
-      let figure = figures[figureIndex];
-      if (D.isDown) {
-         if (figure.mouseUp)
-            figure.mouseUp(D.x, D.y);
-	 D.isDown = false;
-	 return;
-      }
-   }
-
-   pen.up();
-}
-
-let penMove = (x,y) => {
-   if (isInfo) {
-      D.x = x - D.left;
-      D.y = y - D.top;
-      let figure = figures[figureIndex];
-      if (D.isDown && figure.mouseDrag) {
-         figure.mouseDrag(D.x, D.y);
-	 return;
-      }
-      if (D.isIn() && figure.mouseMove) {
-         figure.mouseMove(D.x, D.y);
-	 return;
-      }
-   }
-
-   pen.move(x,y);
-   if (isMove)
-      chalktalk.move(x,y);
-   if (isDrag)
-      chalktalk.drag(x,y);
-}
-
-document.addEventListener('mousemove', e => penMove(e.x,e.y));
-
-let isPenKey = (e,key) => document.activeElement != codeArea.getElement() && e.key == key;
-
-document.addEventListener('keydown', e => {
-   if (document.activeElement == codeArea.getElement())
-      return;
-   if (e.key.indexOf('Arrow') == 0)
-      e.preventDefault();
-   keyDown(e.key);
-});
-
-document.addEventListener('keyup', e => {
-   help.isSplash = false;
-   if (document.activeElement == codeArea.getElement())
-      return;
-   if (e.key.indexOf('Arrow') == 0)
-      e.preventDefault();
-   keyUp(e.key);
-});
-
-midiDown = key => keyDown("            / m  ;       ".substring(key,key+1));
-//                         '|'|''|'|'|''|'|''|'|'|''
-midiUp   = key => keyUp  ("b1u2wc3s4p5D/,m.'; f g tT".substring(key,key+1));
-
-let keyDown = key => {
-   switch (key) {
-   case 'Alt': isAlt = true; break;
-   case 'Shift': isShift = true; break;
-   case '/': penDown(); break;
-   case ';': isDrag = true; break;
-   case 'm':
-      if (! isMove)
-         chalktalk.moveStart(pen.x,pen.y);
-      isMove = true;
-      break;
-   }
-}
-
-let keyUp = key => {
-   if (isAlt) {
-      switch (key) {
-      case 'ArrowDown' : webcam.A /= 1.1; console.log('webcam.A', webcam.A >> 0); break;
-      case 'ArrowLeft' : webcam.B /= 1.1; console.log('webcam.B', webcam.B >> 0); break;
-      case 'ArrowRight': webcam.B *= 1.1; console.log('webcam.B', webcam.B >> 0); break;
-      case 'ArrowUp'   : webcam.A *= 1.1; console.log('webcam.A', webcam.A >> 0); break;
-      }
-      return;
-   }
-   if (key >= '0' && key <= '9') {
-      setScene(key);
-      return;
-   }
-   switch (key) {
-   case 'Alt': isAlt = false; break;
-   case 'Shift': isShift = false; break;
-   case 'ArrowUp'   : fontSize *= 1.1; break;
-   case 'ArrowDown' : fontSize /= 1.1; break;
-   case 'ArrowLeft' : figureIndex = (figureIndex + figures.length - 1) % figures.length; break;
-   case 'ArrowRight': figureIndex = (figureIndex                     + 1) % figures.length; break;
-   case "'" : chalktalk.add(pen.strokes,pen.x,pen.y); break;
-   case ',' : pen.width *= .707; break;
-   case '.' : pen.width /= .707; break;
-   case '/' : penUp(); break;
-   case ';' : isDrag = false; break;
-   case 'D':
-   case 'Backspace' :
-      if (isShift) {
-         chalktalk.clear();
-         pen.clear();
-      }
-      else if (! chalktalk.delete(pen.x,pen.y))
-         pen.delete();
-      break;
-   case 'b' : webcam.isBlur = ! webcam.isBlur; break;
-   case 'c' : codeArea.getElement().style.left = (isCode = ! isCode) ? 20 : -2000; break;
-   case 'd' : isDrawpad = ! isDrawpad; break;
-   case 'f' : webcam.isFloaters = ! webcam.isFloaters; break;
-   case 'g' : webcam.grabImage(); break;
-   case 'h' : help.isHelp = ! help.isHelp; break;
-   case 'i' : isInfo = ! isInfo; break;
-   case 'l' : isLightPen = ! isLightPen; break;
-   case 'm' : isMove = false; break;
-   case 'o' : isInfoOpaque = ! isInfoOpaque; break;
-   case 'p' : webcam.isPen = ! webcam.isPen; break;
-   case 'r' : shift3D = 1 - shift3D; break;
-   case 's' : isScene = ! isScene; break;
-   case 't' : webcam.opacity = 1.5 - webcam.opacity; break;
-   case 'T' : webcam.opacity = 1.01 - webcam.opacity; break;
-   case 'u' : webcam.ufoTime = webcam.ufoTime ? 0 : Date.now() / 1000; break;
-   case 'v' : webcam.isTrackHead = ! webcam.isTrackHead; break;
-   case 'V' : webcam.showTrackHead = ! webcam.showTrackHead; break;
-   case 'w' : webcam.isWorld = ! webcam.isWorld; break;
-   }
-}
-
-let startTime = Date.now() / 1000;
-let timePrev = startTime;
-
-animate = () => {
-   let time = Date.now() / 1000;
-   let deltaTime = time - timePrev;
-   timePrev = time;
-
-   if (time - startTime > 1 && dq.length > 0) {
-      for (let n = 0 ; n < dq.length ; n++) {
-         figures.splice(dq[n].index, 0, dq[n].diagram);
-         figureNames.splice(dq[n].index, 0, dq[n].name);
-         dq[n].diagram.width = D.w;
-         dq[n].diagram.height = D.h;
-      }
-      dq = [];
-   }
-
-   let scrollPosition = window.pageYOffset;
-   document.body.style.overflow = 'hidden';
-   window.scrollTo(0, scrollPosition);
-
-   t3D = Math.max(0, Math.min(1, t3D + (shift3D ? deltaTime : -deltaTime)));
-   canvas3D.style.left = isScene ? 500 + ease(t3D) * 300 : -2000;
-
-   let p = webcam.update();
-   codeArea.update();
-   ctx.drawImage(webcam.canvas, 0,0,640,440, 0,0,w,h);
-
-   if (isInfo) {
-      ctx.globalAlpha = isInfoOpaque ? 1 : .5;
-      let figure = figures[figureIndex];
-      if (! figure.update)
-         ctx.drawImage(figure, D.left, D.top, 500, 500*figure.height/figure.width);
-      else {
-         figure.update(D.ctx);
-	 ctx.drawImage(canvasDiagram, D.left, D.top);
-      }
-      ctx.globalAlpha = 1;
-   }
-
-   if (isDrawpad) {
-      let w = 500, h = 400, x = screen.width - 20 - w, y = screen.height - 60 - h;
-      ctx.fillStyle = '#ffffff80';
-      ctx.fillRect(x, y, w, h);
-   }
-
-   if (isLightPen && p)
-      penMove(p.x * w / 640, p.y * h / 440);
-   pen.draw(pen.strokes);
-   chalktalk.update(pen.draw);
-   scene.update(webcam.headPos);
-   help.display(ctx);
-}
-
-</script>
+<body>
+<script src=core/js/bici.js></script>
+<script>loadProject('0917')</script>
+</body>
