--- a/index.html
+++ b/index.html
@@ -3,30 +3,21 @@
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/face_mesh/face_mesh.js"></script>
 </head>
 
 <body>
 <script src=core/js/bici.js></script>
 <script>loadProject('0924')</script>
 <style>
-  #overlayCanvas {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 9999;
-    pointer-events: none;
+  #handCanvas {
+    position: fixed;   /* pin to viewport */
+    z-index: 9999;     /* draw above everything */
   }
 </style>
 
-<canvas id="overlayCanvas" width="640" height="480"></canvas>
-
+<canvas id="handCanvas" width="640" height="480"></canvas>
 <script>
-function initMediapipe() {
-  const canvas = document.getElementById("overlayCanvas");
-  const ctx = canvas.getContext("2d");
-
-  // ---------- Hands ----------
+function initHands() {
   const hands = new Hands({
     locateFile: (f) => `https://cdn.jsdelivr.net/npm/@mediapipe/hands/${f}`
   });
@@ -37,73 +28,38 @@ function initMediapipe() {
     minTrackingConfidence: 0.5,
   });
 
-  // ---------- FaceMesh ----------
-  const faceMesh = new FaceMesh({
-    locateFile: (f) => `https://cdn.jsdelivr.net/npm/@mediapipe/face_mesh/${f}`
-  });
-  faceMesh.setOptions({
-    maxNumFaces: 1,
-    refineLandmarks: true,   // includes eyes + lips details
-    minDetectionConfidence: 0.5,
-    minTrackingConfidence: 0.5,
-  });
-
-  // Store last detections to render together
-  let lastHands = [];
-  let lastFace = [];
+  const canvas = document.getElementById("handCanvas");
+  const ctx = canvas.getContext("2d");
 
   hands.onResults((results) => {
-    lastHands = results.multiHandLandmarks || [];
-  });
-  faceMesh.onResults((results) => {
-    lastFace = results.multiFaceLandmarks || [];
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
+    if (results.multiHandLandmarks) {
+        console.log("Detected:", results.multiHandLandmarks);
+        results.multiHandLandmarks.forEach((landmarks) => {
+        landmarks.forEach((lm) => {
+            const x = (1 - lm.x) * canvas.width;  // mirror horizontally
+            const y = lm.y * canvas.height;
+            ctx.beginPath();
+            ctx.arc(x, y, 5, 0, 2 * Math.PI);
+            ctx.fillStyle = "red";
+            ctx.fill();
+            });
+        })
+    }
   });
 
   async function processFrame() {
-    if (!window.webcam || window.webcam.videoWidth === 0) {
+    if (!window.webcam || window.webcam.videoWidth === 0 || window.webcam.videoHeight === 0) {
       requestAnimationFrame(processFrame);
       return;
     }
-    canvas.width = window.webcam.videoWidth;
-    canvas.height = window.webcam.videoHeight;
-
-    // run both models
     await hands.send({ image: window.webcam });
-    await faceMesh.send({ image: window.webcam });
-
-    // now draw everything
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-    // hands
-    lastHands.forEach((landmarks) => {
-      landmarks.forEach((lm) => {
-        const x = (1 - lm.x) * canvas.width; // mirrored
-        const y = lm.y * canvas.height;
-        ctx.beginPath();
-        ctx.arc(x, y, 5, 0, 2 * Math.PI);
-        ctx.fillStyle = "red";
-        ctx.fill();
-      });
-    });
-
-    // face
-    lastFace.forEach((landmarks) => {
-      landmarks.forEach((lm) => {
-        const x = (1 - lm.x) * canvas.width; // mirrored
-        const y = lm.y * canvas.height;
-        ctx.beginPath();
-        ctx.arc(x, y, 2, 0, 2 * Math.PI); // smaller dots for face
-        ctx.fillStyle = "blue";
-        ctx.fill();
-      });
-    });
-
     requestAnimationFrame(processFrame);
   }
 
   function startIfReady() {
     if (window.webcam && window.webcam.videoWidth > 0) {
-      console.log("Webcam ready, starting frame loop");
+      console.log("Webcam ready, start frame loop");
       processFrame();
       return true;
     }
@@ -126,7 +82,7 @@ function initMediapipe() {
 const waitForWebcam = setInterval(() => {
   if (window.webcam) {
     clearInterval(waitForWebcam);
-    initMediapipe();
+    initHands();
   }
 }, 100);
 </script>
