Started 1001 project (noise and procedural textures). slides.txt now allows "//" style comments. Everything to end of line is ignored.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<body>
+<body bgcolor=black>
 <script src=core/js/bici.js></script>
-<script>loadProject('0924')</script>
+<script>loadProject('1001')</script>
 </body>
