Added option key 'a' to bring up webpage of my videos. Reorganize index.html to give the user a way to choose a project. Change scenes in project 1001 so they are fully functional by default.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <body bgcolor=black>
 <script src=core/js/bici.js></script>
-<script>loadProject('1015')</script>
+<button onclick=loadProject('0917')>0917</button>
+<button onclick=loadProject('0924')>0924</button>
+<button onclick=loadProject('1001')>1001</button>
+<button onclick=loadProject('1008')>1008</button>
+<button onclick=loadProject('1015')>1015</button>
 </body>
