Added changes for Oct 22 class.

--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@
 <button onclick=loadProject('1001')>1001</button>
 <button onclick=loadProject('1008')>1008</button>
 <button onclick=loadProject('1015')>1015</button>
+<button onclick=loadProject('1022')>1022</button>
 </body>
