Made many changes in preparation for Oct 29 class.

--- a/index.html
+++ b/index.html
@@ -6,4 +6,5 @@
 <button onclick=loadProject('1008')>1008</button>
 <button onclick=loadProject('1015')>1015</button>
 <button onclick=loadProject('1022')>1022</button>
+<button onclick=loadProject('1029')>1029</button>
 </body>
