Add WebRTC peer-to-peer video chat integration
- Implemented WebRTC signaling server with WebSocket support
- Added WebRTC client module for peer connections
- Created video UI with controls (video, audio, visibility toggles)
- Integrated WebRTC into BICI initialization flow
- Added comprehensive documentation in WEBRTC_SETUP.md
- Fixed duplicate video element bug
- Added minimal dependencies: express and ws
- Video thumbnails appear in bottom-right corner
- Auto-connects users when they join same project

--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>BICI - Interactive Video Chat Platform</title>
+<link rel="stylesheet" href="core/css/webrtc.css">
+</head>
 <body bgcolor=black>
 <script src=core/js/bici.js></script>
 <button onclick=loadProject('0917')>0917</button>
