--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
 <link rel="stylesheet" href="core/css/webrtc.css">
 </head>
 <body bgcolor=black>
+<script type="module">
+  // Import Yjs modules
+  import * as Y from './node_modules/yjs/dist/yjs.mjs';
+  import { WebsocketProvider } from './node_modules/y-websocket/dist/y-websocket.mjs';
+  import { TextAreaBinding } from './node_modules/y-textarea/dist/y-textArea.es.js';
+
+  // Make them globally available
+  window.Y = Y;
+  window.WebsocketProvider = WebsocketProvider;
+  window.TextAreaBinding = TextAreaBinding;
+</script>
 <script src=core/js/bici.js></script>
 <button onclick=loadProject('0917')>0917</button>
 <button onclick=loadProject('0924')>0924</button>
