Add WebRTC bidirectional control and Yjs collaborative code editing
Implements two major features for multi-user collaboration:

1. Bidirectional Control
   - Both clients can control the presentation (not just master)
   - Secondary clients send actions to master via WebSocket
   - Master processes actions and broadcasts state to all clients
   - Fixed keyUp scope (window.keyUp) for cross-module access
   - Fixed master client detection to include self in calculation

2. Collaborative Code Editing
   - Real-time code synchronization using Yjs CRDT
   - Google Docs-style editing where both users edit 3D model code together
   - Separate WebSocket connections for Yjs (binary) and WebRTC (JSON)
   - Automatic scene reload on remote code changes
   - Debounced reload (500ms) to prevent video freeze
   - Backtick stripping from synced code

Architecture:
- Two WebSocket connections per client:
  * ws://host/ - WebRTC signaling + state sync + actions (JSON)
  * ws://host/bici-code-editor - Yjs document sync (binary)
- Master client pattern: first client (lowest ID) is master
- Client-side: Yjs CDN import, custom WebSocket binding
- Server-side: Yjs npm package, simple update relay

Implementation Details:
- Custom textarea binding (no y-textarea dependency)
- Raw Yjs update broadcasting (no complex sync protocol)
- Proper error handling for mixed binary/JSON messages
- Action relay system for bidirectional control
- State broadcasting with debounce (50ms)
- Clean, minimal implementation (~200 lines total)

Dependencies Added:
- yjs: ^13.6.18 (server-side only)

--- a/index.html
+++ b/index.html
@@ -3,8 +3,22 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>BICI - Interactive Video Chat Platform</title>
 <link rel="stylesheet" href="core/css/webrtc.css">
+<script type="importmap">
+{
+  "imports": {
+    "yjs": "https://cdn.jsdelivr.net/npm/yjs@13.6.18/+esm"
+  }
+}
+</script>
 </head>
 <body bgcolor=black>
+<script type="module">
+  // Import only Yjs - we don't actually need lib0 on client side
+  import * as Y from 'yjs';
+
+  // Make it globally available
+  window.Y = Y;
+</script>
 <script src=core/js/bici.js></script>
 <button onclick=loadProject('0917')>0917</button>
 <button onclick=loadProject('0924')>0924</button>
