Made lots of changes in support of the November 5 class.

--- a/index.html
+++ b/index.html
@@ -27,4 +27,5 @@
 <button onclick=loadProject('1015')>1015</button>
 <button onclick=loadProject('1022')>1022</button>
 <button onclick=loadProject('1029')>1029</button>
+<button onclick=loadProject('1105')>1105</button>
 </body>
