Updated many things, and added most material for Nov 12 class.

--- a/index.html
+++ b/index.html
@@ -28,4 +28,5 @@
 <button onclick=loadProject('1022')>1022</button>
 <button onclick=loadProject('1029')>1029</button>
 <button onclick=loadProject('1105')>1105</button>
+<button onclick=loadProject('1112')>1112</button>
 </body>
