--- a/index.html
+++ b/index.html
@@ -10,6 +10,97 @@
   }
 }
 </script>
+<style>
+  /* Project selector overlay */
+  #project-selector {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.9);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    z-index: 900;
+    font-family: 'Segoe UI', Arial, sans-serif;
+  }
+  
+  #project-selector h1 {
+    color: #4CAF50;
+    margin-bottom: 10px;
+    font-size: 32px;
+    font-weight: 300;
+  }
+  
+  #project-selector .subtitle {
+    color: #888;
+    margin-bottom: 30px;
+    font-size: 14px;
+  }
+  
+  #project-selector .project-grid {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 12px;
+    max-width: 600px;
+  }
+  
+  #project-selector button {
+    padding: 15px 25px;
+    font-size: 16px;
+    font-weight: 500;
+    background: rgba(255, 255, 255, 0.1);
+    color: white;
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    border-radius: 8px;
+    cursor: pointer;
+    transition: all 0.2s ease;
+  }
+  
+  #project-selector button:hover {
+    background: rgba(76, 175, 80, 0.3);
+    border-color: #4CAF50;
+    transform: scale(1.05);
+  }
+  
+  #project-selector button:active {
+    transform: scale(0.98);
+  }
+  
+  /* Mini project switcher (visible after project is loaded) */
+  #project-switcher {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    z-index: 800;
+    display: none;
+  }
+  
+  #project-switcher button {
+    padding: 8px 16px;
+    font-size: 14px;
+    background: rgba(0, 0, 0, 0.7);
+    color: white;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 6px;
+    cursor: pointer;
+    transition: all 0.2s ease;
+  }
+  
+  #project-switcher button:hover {
+    background: rgba(76, 175, 80, 0.5);
+    border-color: #4CAF50;
+  }
+  
+  #current-project {
+    color: #4CAF50;
+    font-weight: bold;
+    margin-right: 10px;
+    font-family: 'Courier New', monospace;
+  }
+</style>
 </head>
 <body bgcolor=black>
 <script type="module">
@@ -20,14 +111,36 @@
   window.Y = Y;
 </script>
 <script src=core/js/bici.js></script>
-<button onclick=loadProject('0917')>0917</button>
-<button onclick=loadProject('0924')>0924</button>
-<button onclick=loadProject('1001')>1001</button>
-<button onclick=loadProject('1008')>1008</button>
-<button onclick=loadProject('1015')>1015</button>
-<button onclick=loadProject('1022')>1022</button>
-<button onclick=loadProject('1029')>1029</button>
-<button onclick=loadProject('1105')>1105</button>
-<button onclick=loadProject('1112')>1112</button>
-<button onclick=loadProject('1211')>1211</button>
+
+<!-- Project selector overlay (shown at startup) -->
+<div id="project-selector">
+  <h1>BICI</h1>
+  <div class="subtitle">Select a project to begin</div>
+  <div class="project-grid">
+    <button onclick="loadProject('0917')">0917</button>
+    <button onclick="loadProject('0924')">0924</button>
+    <button onclick="loadProject('1001')">1001</button>
+    <button onclick="loadProject('1008')">1008</button>
+    <button onclick="loadProject('1015')">1015</button>
+    <button onclick="loadProject('1022')">1022</button>
+    <button onclick="loadProject('1029')">1029</button>
+    <button onclick="loadProject('1105')">1105</button>
+    <button onclick="loadProject('1112')">1112</button>
+    <button onclick="loadProject('1211')">1211</button>
+  </div>
+</div>
+
+<!-- Mini project switcher (visible after project loaded) -->
+<div id="project-switcher">
+  <span id="current-project"></span>
+  <button onclick="showProjectSelector()">Switch Project</button>
+</div>
+
+<script>
+  // Store reference to project selector UI
+  projectSelectorUI = document.getElementById('project-selector');
+  
+  // Load core scripts immediately (starts WebRTC connection)
+  loadCore();
+</script>
 </body>
