Started a new project with a game cube. Added font texture as standard texture id 15. Added option to specify texture id in drawObj().

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
     <button onclick="loadProject('1105')">1105</button>
     <button onclick="loadProject('1112')">1112</button>
     <button onclick="loadProject('1211')">1211</button>
+    <button onclick="loadProject('1224')">1224</button>
   </div>
 </div>
 
