Started to do 3D object tracking with hand, in new project 0105.

--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
     <button onclick="loadProject('1112')">1112</button>
     <button onclick="loadProject('1211')">1211</button>
     <button onclick="loadProject('1224')">1224</button>
+    <button onclick="loadProject('0105')">0105</button>
   </div>
 </div>
 
