--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   }
   
   #current-project {
-    color: #4CAF50;
+    color: #000000;
     font-weight: bold;
     margin-right: 10px;
     font-family: 'Courier New', monospace;
