--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
     <button onclick="loadProject('1211')">1211</button>
     <button onclick="loadProject('1224')">1224</button>
     <button onclick="loadProject('0105')">0105</button>
+    <button onclick="loadProject('0115')">0115</button>
   </div>
 </div>
 
