Refactor slide manager to mirror scenemanager logic

--- a/refactor.html
+++ b/refactor.html
@@ -13,7 +13,8 @@
     <div id="stage">
         <video id="webcam" autoplay playsinline hidden></video>
         <canvas id="canvas-2d"></canvas>
-        <canvas id="canvas-3d" width="500" height="500"></canvas>
+        <canvas id="canvas-scene" width="500" height="500"></canvas>
+        <canvas id="canvas-slide" width="500" height="500"></canvas>
         <canvas id="canvas-overlay"></canvas>
         <textarea id="code-editor" spellcheck="false"></textarea>
     </div>
