Basic text infrastructure attempt 2

--- a/text.html
+++ b/text.html
@@ -4,17 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BICI - Interactive Video Chat Platform</title>
-    <link rel="stylesheet" href="core/css/style.css" />
+    <link rel="stylesheet" href="core/css/text.css" />
   </head>
   <body>
-    <script src="core/js/bici.js"></script>
-
     <!-- Main visible elements -->
     <div id="stage">
         <video id="webcam" autoplay playsinline hidden></video>
         <canvas id="canvas-2d"></canvas>
-        <canvas id="canvas-scene" width="500" height="500"></canvas>
-        <canvas id="canvas-slide" width="500" height="500"></canvas>
         <canvas id="canvas-overlay"></canvas>
         <textarea id="code-editor" spellcheck="false"></textarea>
     </div>
@@ -24,20 +20,8 @@
       <h1>BICI</h1>
       <div class="subtitle">Select a project to begin</div>
       <div id="project-grid">
-        <button data-project="0917">0917</button>
-        <button data-project="0924">0924</button>
-        <button data-project="1001">1001</button>
-        <button data-project="1008">1008</button>
-        <button data-project="1015">1015</button>
-        <button data-project="1022">1022</button>
-        <button data-project="1029">1029</button>
-        <button data-project="1105">1105</button>
-        <button data-project="1112">1112</button>
-        <button data-project="1211">1211</button>
-        <button data-project="1224">1224</button>
-        <button data-project="0105">0105</button>
-        <button data-project="0115">0115</button>
-        <button data-project="0116">0116</button>
+        <button data-project="lorem">Lorem Ipsum</button>
+        <button data-project="dickens">A Tale of Two Cities</button>
       </div>
     </div>
 
@@ -47,6 +31,6 @@
       <button id="project-switch-btn">Switch Project</button>
     </div>
 
-    <script type="module" src="core/main.js"></script>
+    <script type="module" src="core/text_modules/main.js"></script>
   </body>
 </html>
