Added handPose.js to gather data measured from hand positions. Added project 0221, in which scene1.js displays results of handPose.js..

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
     <button onclick="loadProject('1224')">1224</button>
     <button onclick="loadProject('0105')">0105</button>
     <button onclick="loadProject('0115')">0115</button>
+    <button onclick="loadProject('0221')">0221</button>
   </div>
 </div>
 
